la-solution-fin

--- a/la-solution.html
+++ b/la-solution.html
@@ -142,7 +142,7 @@
         <h4>
             <strong>
                 si vous avez suivis ces consignes vous avez reussi:<br>
-                si pour x raison cela ne fonctionne pas, remetez vous en cause.
+                si pour x raison cela ne fonctionne pas, remetez vous en cause.<br>
                 si vous ne trouvez toujours pas a quoi c'est du, regarder sur le net car les formateurs on déja donné.
             </strong>
         </h4>
